--- a/CSS/style.css
+++ b/CSS/style.css
@@ -139,9 +139,9 @@ body {
     
     height: 550px;
     
-    background-image: 
+    /* background-image: 
         linear-gradient(to top, rgba(0, 0, 0, .3), rgba(0, 0, 0, .55)50%), 
-        url("https://media.istockphoto.com/photos/technology-symbols-on-hexagon-network-with-polygon-graphic-abstract-picture-id1251263531?b=1&k=20&m=1251263531&s=170667a&w=0&h=rQKLpKux3yBVGWMCbuiERZ8BT9ilpkjn7QjP2AUxjJA=");
+        url("https://media.istockphoto.com/photos/technology-symbols-on-hexagon-network-with-polygon-graphic-abstract-picture-id1251263531?b=1&k=20&m=1251263531&s=170667a&w=0&h=rQKLpKux3yBVGWMCbuiERZ8BT9ilpkjn7QjP2AUxjJA="); */
     background-image: 
         linear-gradient(to top, rgba(0, 0, 0, .3), rgba(0, 0, 0, .55)50%), 
         url("https://images.unsplash.com/photo-1597852615794-7cf67421d3ca?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTgwfHxiZWV8ZW58MHwwfDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60");
@@ -252,6 +252,7 @@ body {
 }
 
 .beneficios a:hover {
+    color: var(--clrÉnfasis);
     text-decoration: underline;
 }
 
@@ -277,7 +278,8 @@ body {
 .resume {
     background-image: 
         url("https://media.istockphoto.com/photos/business-man-review-his-resume-application-on-desk-laptop-computer-picture-id1149054436?b=1&k=20&m=1149054436&s=170667a&w=0&h=gR6DQMvAEFYc1hZikJ9sT1xQPG5Czr51uB7jQYdPOAg=");
-    color: var(--clrTextos);
+    /* color: var(--clrTextos); */
+    box-shadow: 1px 1px 1px 0px rgb(90, 90, 90, .95);
 }
 
 .school {
@@ -285,12 +287,14 @@ body {
         url('https://images.unsplash.com/photo-1477281765962-ef34e8bb0967?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTh8fGNsYXNzcm9vbSUyMHVuaXZlcnNpdHl8ZW58MHwwfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60');
     background-image: 
         url('https://images.unsplash.com/photo-1519452575417-564c1401ecc0?ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8Y2xhc3Nyb29tJTIwdW5pdmVyc2l0eXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60');
+        box-shadow: 1px 1px 1px 0px rgb(90, 90, 90, .95);
 }
 
 .extra {
     background-image: 
         url('https://media.istockphoto.com/photos/laboratory-glassware-containing-chemical-liquid-science-background-picture-id1067056942?b=1&k=20&m=1067056942&s=170667a&w=0&h=5OcF16YEFEEncVKkAjluXh7BIXAMVAjov62dLXztXZU=');
-    color: var(--clrTextos);
+    /* color: var(--clrTextos); */
+    box-shadow: 1px 1px 1px 0px rgb(90, 90, 90, .95);
 }
 
 .projects {
