--- a/CSS/style.css
+++ b/CSS/style.css
@@ -493,6 +493,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 70px;
 }
 
 .form__container {
